syntax = "proto3";

package com.huawei.fit.hakuna.kernel.shared;

option optimize_for = LITE_RUNTIME;
option java_package = "com.huawei.fit.hakuna.kernel.shared.proto";
option java_outer_classname = "FitableProto";



message Fitable {
  string genericableId = 1;
  string genericableVersion = 2;
  string fitableId = 3;
  string fitableVersion = 4;
}