syntax = "proto3";
package fitlab.core.component;

syntax = "proto3";

package com.huawei.fitframework.broker.serialization;

option java_package = "com.huawei.fitframework.broker.serialization.proto";
option java_outer_classname = "FitAnyProto";
option optimize_for = LITE_RUNTIME;//可以被设置为 SPEED, CODE_SIZE,or LITE_RUNTIME。这些值将通过如下的方式影响C++及java代码的生成,默认是SPEED，一般不需要设置

message FitAny {
    string typeUrl = 1;
    bytes value = 2;
}
message Person{
  string name =1;
  int32 age = 2;
}

message Result{
  int32 code = 1;
  string message = 2;
  google.protobuf.Any data = 3;
}

// common source: common/broker/serialization/broker.proto
syntax = "proto3";

package com.huawei.fitframework.broker.serialization;

option optimize_for = LITE_RUNTIME;
option java_package = "com.huawei.fitframework.broker.serialization.proto";
option java_outer_classname = "BrokerProto";

message FitRequest {
    bytes argumentNulls = 1;
    repeated bytes arguments = 2;
}

message FitResponse {
    int32 code = 1;
    string message = 2;
    bytes data = 3;
    string errorType = 4;
}

message ListMessage {
    repeated bytes value = 1;
}

message MapMessage {
    repeated MapEntry mapEntry = 1;
}

message MapEntry {
    bytes key = 1;
    bytes value = 2;
}